components/manifests/overlays/kind/backend-ambient-api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  template:
    spec:
      containers:
      - name: backend-api
