components/manifests/overlays/kind/backend-sso-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  template:
    spec:
      containers:
        - name: backend-api
