components/manifests/overlays/kind/observability-dashboard-scale-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observability-dashboard
spec:
  replicas: 0
