components/manifests/overlays/kind/public-api-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api-service
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: http
    nodePort: 30081
    name: http
