components/manifests/overlays/kind/networkpolicy-permissive-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-platform-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - {}
